--- a/package.json
+++ b/package.json
@@ -10,8 +10,30 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.21.0",
+    "@react-navigation/bottom-tabs": "^6.5.11",
+    "@react-navigation/material-top-tabs": "^6.6.5",
+    "@react-navigation/native": "^6.1.9",
+    "@react-navigation/stack": "^6.3.20",
+    "@reduxjs/toolkit": "^2.0.1",
+    "axios": "^1.6.2",
+    "firebase": "^10.7.1",
+    "lottie-react-native": "^6.4.1",
     "react": "18.2.0",
-    "react-native": "0.73.0"
+    "react-firebase-hooks": "^5.1.1",
+    "react-native": "0.73.0",
+    "react-native-dotenv": "^3.4.9",
+    "react-native-dropdown-picker": "^5.4.6",
+    "react-native-gesture-handler": "^2.14.0",
+    "react-native-pager-view": "^6.2.3",
+    "react-native-reanimated": "^3.6.1",
+    "react-native-safe-area-context": "^4.8.0",
+    "react-native-screens": "^3.29.0",
+    "react-native-svg": "^14.1.0",
+    "react-native-tab-view": "^3.5.2",
+    "react-native-toast-message": "^2.1.8",
+    "react-native-vector-icons": "^10.0.2",
+    "redux": "^5.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
