--- a/package.json
+++ b/package.json
@@ -25,10 +25,13 @@
     "react-native-dotenv": "^3.4.9",
     "react-native-dropdown-picker": "^5.4.6",
     "react-native-gesture-handler": "^2.14.0",
+    "react-native-linear-gradient": "^2.8.3",
     "react-native-pager-view": "^6.2.3",
     "react-native-reanimated": "^3.6.1",
     "react-native-safe-area-context": "^4.8.0",
     "react-native-screens": "^3.29.0",
+    "react-native-shimmer-placeholder": "^2.0.9",
+    "react-native-splash-screen": "^3.3.0",
     "react-native-svg": "^14.1.0",
     "react-native-tab-view": "^3.5.2",
     "react-native-toast-message": "^2.1.8",
